# TarotAI

./: .gitignore  CMakeLists.txt  LICENSE  generate.py
include/: Card.hpp  DatasetExporter.hpp  GameEngine.hpp  Rules.hpp
src/: Cards.cpp  DatasetExporter.cpp  GameEngine.cpp  Rules.cpp  main.cpp
